# ai-agent-simulation

./: .gitignore  00_项目总览.md  01_PRD_AI南大_多智能体校园社会模拟系统.md  02_项目记忆.md  03_参考项目与论文.md  04_简历表达.md  05_MVP任务拆解.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: agents.py  debug.py  events.py  runs.py
backend/app/core/: config.py  time.py
backend/app/db/: session.py
backend/app/domain/: actions.py  constants.py  schemas.py
backend/app/llm/: anthropic_provider.py  base.py  deepseek_provider.py  fake_provider.py  prompts.py  schemas.py
backend/app/models/: tables.py
backend/app/seed/: event_templates.py  seed_data.py  seed_service.py
backend/app/services/: action_selector.py  events.py  game_master.py  llm_service.py  memory.py  relationships.py  safety.py  simulation.py
backend/tests/: conftest.py  test_action_selector.py  test_agents_api.py  test_campus_events.py  test_debug_api.py  test_game_master.py  test_interventions.py  test_llm_contracts.py  test_memory.py  test_runs_api.py  test_simulation_tick.py
docs/superpowers/plans/: 2026-06-21-ai-nanda-agent-simulation.md
docs/superpowers/specs/: 2026-06-21-ai-nanda-agent-simulation-design.md
docs/testing/: manual-test-checklist.md
frontend/: package-lock.json  package.json  playwright.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AgentDetailPanel.tsx  AgentSidebar.tsx  CampusMap.tsx  EventFeed.tsx  SimulationHeader.tsx
frontend/src/lib/: api.ts  time.ts
frontend/tests/: simulation.spec.ts
(+2 files in other folders)
