[project]
name = "ai-nanda-backend"
version = "0.1.0"
description = "FastAPI backend for AI Nanda multi-agent campus simulation"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.74.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "sqlmodel>=0.0.22",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
  "llm: tests that make real LLM API calls",
]

[tool.ruff]
line-length = 100
